# typepractice

./: Readme.md  stack.yaml  typepractice.cabal
src/: Main.hs  TypePractice.hs  Zipper.hs
